fix(applauncher): add support for right and top alignment (#2081)

--- a/src/patternfly/components/AppLauncher/app-launcher.scss
+++ b/src/patternfly/components/AppLauncher/app-launcher.scss
@@ -7,6 +7,8 @@
   --pf-c-app-launcher__menu--PaddingBottom: var(--pf-global--spacer--sm);
   --pf-c-app-launcher__menu--Top: calc(100% + var(--pf-global--spacer--xs));
   --pf-c-app-launcher__menu--ZIndex: var(--pf-global--ZIndex--sm);
+  --pf-c-app-launcher--m-top__menu--Top: 0;
+  --pf-c-app-launcher--m-top__menu--Transform: translateY(calc(-100% - var(--pf-global--spacer--xs))); // The "dropup" menu must be transformed up and this calculates how much to create space between the toggle and menu
 
   // Expanded
   --pf-c-app-launcher__toggle--PaddingTop: var(--pf-global--spacer--form-element);
@@ -17,6 +19,7 @@
   --pf-c-app-launcher__toggle--hover--Color: var(--pf-global--Color--100);
   --pf-c-app-launcher__toggle--active--Color: var(--pf-global--Color--100);
   --pf-c-app-launcher__toggle--focus--Color: var(--pf-global--Color--100);
+  --pf-c-app-launcher__toggle--disabled--Color: var(--pf-global--disabled-color--200);
   --pf-c-app-launcher__toggle--m-expanded--Color: var(--pf-global--Color--100);
 
   // Menu item
@@ -86,6 +89,13 @@
   &.pf-m-focus {
     --pf-c-app-launcher__toggle--Color: var(--pf-c-app-launcher__toggle--focus--Color);
   }
+
+  &:disabled,
+  &.pf-m-disabled {
+    --pf-c-app-launcher__toggle--Color: var(--pf-c-app-launcher__toggle--disabled--Color);
+
+    pointer-events: none;
+  }
 }
 
 .pf-c-app-launcher__menu {
@@ -99,6 +109,16 @@
   background-clip: padding-box;
   border: var(--pf-c-app-launcher__menu--BorderWidth) solid transparent; // this is for high contrast mode in windows
   box-shadow: var(--pf-c-app-launcher__menu--BoxShadow);
+
+  &.pf-m-align-right {
+    right: 0;
+  }
+
+  .pf-c-app-launcher.pf-m-top & {
+    --pf-c-app-launcher__menu--Top: var(--pf-c-app-launcher--m-top__menu--Top);
+
+    transform: var(--pf-c-app-launcher--m-top__menu--Transform);
+  }
 }
 
 .pf-c-app-launcher__menu-item {
